tests/snapshots/ui_tests__snapshot_multiple_filters_active.snap
---
source: tests/ui_tests.rs
expression: output
---
web [Stopped] | worker [Stopped]                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
(2 filters)                                                                                                             
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] worker: Job #1234 completed successfully                                                                     
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines | 1 batches [TAIL]                                                                     
Press : for commands, / to search, q to quit
