tests/snapshots/ui_tests__snapshot_search_and_batching_combined.snap
---
source: tests/ui_tests.rs
expression: output
---
web [Stopped] | worker [Stopped]                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[Search: job] 2 matches                                                                                                 
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] worker: Job #1234 completed                                                                                  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 6 lines | Batch 1/3, 3 lines [TAIL]                                                            
Press : for commands, / to search, q to quit
